# ops-translate

./: .gitignore  CHANGELOG.md  DEMO.md  LICENSE  README.md  SPEC.md  capture-screenshots.sh  demo-improvements.md  demo.sh  demo.sh.INTERVIEW-NOTES.md  package.json  playwright-demo.config.ts  playwright.config.ts  pyproject.toml  record-demo.sh  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  lint.yml  release.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  FIELD_GUIDE.md  ORGANIZATION.md  PATTERNS.md  README.md  TUTORIAL.md  USER_GUIDE.md
examples/: README.md
media/: README.md  ops-translate-demo.tape
nsx-multinetwork-demo/: AWS_TEST_ENVIRONMENT_SUMMARY.md  INDEX.md  QUICK-REFERENCE.md  README-AWS-SETUP.md  cleanup-aws-test-environment.sh  multi-networkpolicy-install.yaml  nad-aws-bridge-test.yaml  organize-demo-files.sh  setup-aws-test-environment.sh  test-pods-demo.yaml
ops_translate/: __init__.py  __main__.py  cli.py  decisions.py  exceptions.py  workspace.py
prompts/: generate_artifacts.md  intent_extract_powercli.md  intent_extract_vrealize.md
schema/: config.schema.json  decisions.schema.json  intent.schema.json  profile.schema.json
templates/: ansible_role_defaults.yml.j2  ansible_role_tasks.yml.j2  ansible_site.yml.j2  kubevirt_vm.yaml.j2  output_readme.md.j2
tests/: conftest.py  test_acme_corp_fixture.py  test_action_call_extraction.py  test_analysis.py  test_analyze_powercli.py  test_analyze_vrealize.py  test_ansible_locking.py  test_ansible_role_generation.py  test_automatic_path_selection.py  test_classify.py  test_cli.py  test_decision_interview.py  test_dry_run.py  test_e2e_ansible_project.py  test_eda_rulebook.py  test_effort_metrics.py  test_error_handling.py  test_error_handling_translation.py  test_extract_gap_integration.py  test_formats.py  test_gap_analysis_integration.py  test_gaps.py  test_integration.py  test_interview_evidence.py  test_kubevirt_templates.py  test_llm.py  test_merge.py  test_multinetworkpolicy.py  test_nsx_correlation.py  test_nsx_network_attachment.py  test_nsx_networkpolicy.py  test_powercli_script_parser.py  test_powershell_to_ansible_translator.py  test_profile_driven_adapters.py  test_profile_system.py  test_report_html.py  test_report_loaders.py  test_report_snapshots.py  test_summarize.py  test_summarize_with_actions.py  (+10 more)
(+261 files in other folders)
