[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ops-translate"
version = "0.1.0"
description = "AI-assisted operational translation CLI for VMware automation → Ansible + OpenShift Virtualization"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Todd Sanders", email = "todd@example.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20.0",
    "jinja2>=3.1.0",
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "rich>=13.0.0",
    "lxml>=4.9.0",
    "markdown>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-pyyaml>=6.0.0",
    "types-jsonschema>=4.20.0",
]

[project.scripts]
ops-translate = "ops_translate.cli:app"

[project.urls]
Homepage = "https://github.com/tsanders-rh/ops-translate"
Documentation = "https://github.com/tsanders-rh/ops-translate/blob/main/README.md"
Repository = "https://github.com/tsanders-rh/ops-translate"
Issues = "https://github.com/tsanders-rh/ops-translate/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ops_translate*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=ops_translate --cov-report=term-missing"
